--- a/Site/Web.config
+++ b/Site/Web.config
@@ -6,9 +6,15 @@
   -->
 
 <configuration>
-
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
     <system.web>
-      <pages theme="Monochrome"/>
+      <pages theme="Monochrome">
+        <controls>
+          <add tagPrefix="Wrox" tagName="Banner" src="~/Controls/Banner.ascx" />
+        </controls>
+      </pages>
       <compilation debug="true" targetFramework="4.5.1">
       </compilation>
       <httpRuntime targetFramework="4.5.1"/>
